<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <DUT Name="T_BCH" Id="{0c998de9-8cc7-4a56-ba39-b614c627e184}">
    <Declaration><![CDATA[TYPE T_BCH :
STRUCT
	io: T_BCH_IO;
	ctrl: T_BCH_CTRL;
	id: T_BCH_ID;
	datachn: T_BCH_DATACHN;
END_STRUCT
END_TYPE
]]></Declaration>
    <ObjectProperties />
  </DUT>
</TcPlcObject>