<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.0.26">
  <POU Name="cycle_Bch" Id="{4ce72381-dd30-4c2d-82b1-5cbd91b20937}">
    <Declaration><![CDATA[FUNCTION cycle_Bch : BOOL
VAR_INPUT
	pBch: POINTER TO T_BCH;
END_VAR
]]></Declaration>
    <Implementation>
      <ST><![CDATA[pBch^.ctrl.fbBch.In_bolSensorTrigScan := pBch^.io.In_bolSensorTrigScan;
pBch^.ctrl.fbBch();
pBch^.ctrl.fbBch_Bcc();
pBch^.ctrl.fbBch_Bcc_Bcd();
pBch^.datachn.rSendData.fbFifo();]]></ST>
    </Implementation>
    <ObjectProperties />
  </POU>
</TcPlcObject>